--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "socket.io": "^1.7.3",
     "ws": "^7.3.1"
   },
+  "devDependencies": {
+    "prettier": "^2.0.5"
+  },
   "scripts": {
     "start": "node index.js"
   }
